--- a/component.yaml
+++ b/component.yaml
@@ -1,6 +1,6 @@
 platform: Common
 buildPlatform:
-displayName: Appcircle Snyk Scan Security Component
+displayName: Appcircle Snyk Scan Security
 description: "By utilizing this step, you will be able to test your project dependencies for vulnerabilities during builds and use Snyk to monitor your projects."
 inputs:
 - key: "AC_REPOSITORY_DIR"
@@ -80,11 +80,12 @@ inputs:
 outputs:
 - key: "AC_SNYK_REPORT"
   title: "Snyk Report HTML File"
+  defaultValue: "$AC_SNYK_REPORT"
   description: Snyk report of executed tests.
   helpText:
 - key: "AC_SNYK_MONITOR_EXPLORE_LINK"
   title: Snyk Monitor Explore Link
-  defaultValue: "AC_TEST_RESULT_PATH"
+  defaultValue: "$AC_TEST_RESULT_PATH"
   description: "The link where the project result is monitored."
   helpText:
 processFilename: bash
