--- a/component.yaml
+++ b/component.yaml
@@ -80,12 +80,12 @@ inputs:
 outputs:
 - key: "AC_SNYK_REPORT"
   title: "Snyk Report HTML File"
-  defaultValue: "$AC_SNYK_REPORT"
+  defaultValue: "AC_SNYK_REPORT"
   description: Snyk report of executed tests.
   helpText:
 - key: "AC_SNYK_MONITOR_EXPLORE_LINK"
   title: Snyk Monitor Explore Link
-  defaultValue: "$AC_TEST_RESULT_PATH"
+  defaultValue: "AC_TEST_RESULT_PATH"
   description: "The link where the project result is monitored."
   helpText:
 processFilename: bash
